--- a/Pages/loan.Pgs/loan_choice.html
+++ b/Pages/loan.Pgs/loan_choice.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>대출반납선택</title>
-  <link rel="stylesheet" href="../Css/font.css" />
+  <link rel="stylesheet" href="/Css/font.css" />
 
   <style>
     html, body {
@@ -51,12 +51,12 @@
 </head>
 <body>
 
-  <div class="section" onclick="location.href='Loan.html'">
+  <div class="section" onclick="location.href='loan_loan.html'">
     <h1>대출하기</h1>
     <p>도서를 대출하려면 여기를 선택하세요.</p>
   </div>
 
-  <div class="section" onclick="location.href='Return.html'">
+  <div class="section" onclick="location.href='loan_return.html'">
     <h1>반납하기</h1>
     <p>도서를 반납하려면 여기를 선택하세요.</p>
   </div>
