--- a/Pages/loan.Pgs/loan_loan.html
+++ b/Pages/loan.Pgs/loan_loan.html
@@ -5,21 +5,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>대출하기</title>
 
-  <link rel="stylesheet" href="../Css/font.css" />
-  <link rel="stylesheet" href="../Css/Loan.css" />
+  <link rel="stylesheet" href="/Css/font.css" />
+  <link rel="stylesheet" href="/Css/Loan.css" />
 
 </head>
 
 <body>
   <div class="container">
     <div class="top-bar">
-    <div class="back-btn" onclick="location.href='LoanReturn.html'">←</div>
+    <div class="back-btn" onclick="location.href='loan_choice.html'">←</div>
     <h1 class = "sun-title">대출하기</h1>
   </div>
     <!-- <div class ="sub-title">
         대출하기
       </div> -->
-    <img src="../Images/navigation2.png" alt="로고" class="logo" />
+    <img src="/Images/navigation2.png" alt="로고" class="logo" />
 
     <form id="loan-form" method="POST" action="/loan">
       
