--- a/Pages/Notice.html
+++ b/Pages/Notice.html
@@ -7,11 +7,14 @@
   
     <link rel="stylesheet" href="../Css/font.css" />
     <link rel="stylesheet" href="../Css/Notice.css" />
+    <link rel="stylesheet" href="../Css/toolkit.css" />
 
 </head>
 <body>
+  
   <div class="top-bar">
-    <h1>공지사항</h1>
+    <a href="MainPage.html" class="back-btn" aria-label="뒤로가기">←</a>
+    <span class="top-tittle">상세 페이지</span>
   </div>
 
   <div id="postContainer">
